...
        <Tabs.Title cursor="pointer" active={activeTab === 'home'}>
          All
        </Tabs.Title>
      </Tabs.Tab>
      <Tabs.Tab name="groups" activeTab={activeTab} onTabPress={onPressTab}>
        <Tabs.Title cursor="pointer" active={activeTab === 'groups'}>
          Workspaces
        </Tabs.Title>
      </Tabs.Tab>
      <Tabs.Tab name="messages" activeTab={activeTab} onTabPress={onPressTab}>
        <Tabs.Title cursor="pointer" active={activeTab === 'messages'}>
          Messages
        </Tabs.Title>
...
