...
      },
    ];
  }, [blockedContacts, onBlockedContactPress]);

  return (
    <SettingsListScreenView
      title="Blocked users"
      sections={sections}
      onBackPressed={() => props.navigation.goBack()}
    />
  );
}

